# automaton-worker

./: CMakeLists.txt  README.md  automata.in  teste1AfndAfd.in
src/: main.cpp
src/automaton/: automata.in  automataworker.cpp  automataworker.hpp  automaton.cpp  automaton.hpp  automatonstate.cpp  automatonstate.hpp
src/grammar/: grammar.cpp  grammar.hpp  grammarproduction.cpp  grammarproduction.hpp  grammars.in  grammarworker.cpp  grammarworker.hpp
src/regex/: regex.cpp  regex.hpp  regexworker.hpp  syntactictree.cpp  syntactictree.hpp  syntactictreecatnode.cpp  syntactictreecatnode.hpp  syntactictreecharnode.cpp  syntactictreecharnode.hpp  syntactictreenode.cpp  syntactictreenode.hpp  syntactictreeornode.cpp  syntactictreeornode.hpp  syntactictreestarnode.cpp  syntactictreestarnode.hpp
src/utils/: config.hpp  fileworker.cpp  fileworker.hpp  utils.cpp  utils.hpp
